mule-healthcare-toolkit/v/3.7/hl7-global-connector.adoc
= HL7 Global Connector
:keywords: hl7, global, connector

You can create and configure an HL7 Connector as a link:/documentation/display/current/Global+Elements[Global Element] which the connectors in your flow will reference. An HL7 connector configured as a global element defines connection parameters for all HL7 connections that reference the connector.

*Release Notes*: link:/documentation/display/current/HL7+Connector+Release+Notes[HL7 Connector Release Notes]

[NOTE]
The HL7 connector is part of the link:/documentation/display/current/Mule+Healthcare+Toolkit[Mule Healthcare Toolkit], which also includes transformers and components for receiving, processing and sending HL7 messages. For details and a full list of available tools, consult the Toolkit's link:/documentation/display/current/Mule+Healthcare+Toolkit[documentation main page].

<<Configuration For Studio and Mule ESB>>

== Configuration

To create an HL7 global connector, complete the following steps:

. Click the *Global Elements* tab under the canvas, then click *Create*.
. At the *Choose Global Type* window, type `hl7` into the *Filter* input field to display only HL7-related global types.
. Under *Connectors*, click *HL7 Connector*, then click *OK*. 

Studio displays the *Global Element Properties* window, where you configure the global connector.

The following subsections describe the connector's configuration parameters for configuration in Studio and Mule ESB.

== XML Element

[source, code, linenums]
----
hl7:connector
----

== Sample Complete XML

[tabs]
------
[tab,title="Studio"]
....

[source,xml, linenums]
----
<hl7:connector name="HL7_Connector" dispatcherPoolFactory-ref="Bean" dynamicNotification="true" validateConnections="true" hl7Encoding="ER7" sendBufferSize="0" receiveBufferSize="0" receiveBacklog="0" sendTcpNoDelay="true" reuseAddress="true" keepSendSocketOpen="true" keepAlive="true" clientSoTimeout="10000" serverSoTimeout="10000" socketSoLinger="0" validation="STRONG" doc:name="HL7 Connector">
  <spring:property name="com.sample.sampleBean" value="sampleValue"/>
</hl7:connector>
----

....
[tab,title="ESB"]
....

[source,xml, linenums]
----
<hl7:connector name="HL7_Connector" dispatcherPoolFactory-ref="Bean" dynamicNotification="true" validateConnections="true" hl7Encoding="ER7" sendBufferSize="0" receiveBufferSize="0" receiveBacklog="0" sendTcpNoDelay="true" reuseAddress="true" keepSendSocketOpen="true" keepAlive="true" clientSoTimeout="10000" serverSoTimeout="10000" socketSoLinger="0" validation="STRONG">
  <spring:property name="com.sample.sampleBean" value="sampleValue"/>
</hl7:connector>
----

....
------

== Configuration For Studio and Mule ESB

[tabs]
------
[tab,title="Studio Visual Editor"]
....

=== General Tab

image:hl7_global_gen.png[hl7_global_gen]

This tab only contains the *Name* field, where you may optionally type a meaningful name for the global connector.

[width="100%",cols="34a,33a,33a",options="header",]
|===
|Name |Description |XML
|*Name*

(Studio only)

|Name of the building block as it appears in the flow
|[source, code, linenums]
----
name="connectorName"
----
|===

=== Advanced Tab

image:hl7_gloabl_advanced.png[hl7_gloabl_advanced]


[width="100%",cols="34a,33a,33a",options="header",]
|===
|Name |Description |XML
|*Dispatched Pool Factory*
|Allows you to reference a TCP dispatcher pool factory other than the default dispatcher factory bean. To add a different dispatcher factory bean ID in Studio, click the image:conn.spring.props-addbutton.png[conn.spring.props-addbutton] button next to the combo box.
|[source, code, linenums]
----
dispatcherPoolFactory-ref="sampleBean"
----

|*Dynamic Notifications*

(boolean)

|Enables link:/documentation/display/current/Mule+Server+Notifications[Dynamic Notifications] for this connector.
|[source, code, linenums]
----
dynamicNotification="true"
----

|*Validate Connections*

(boolean)

|Causes Mule to validate connections before using this connector. Note that this is only a configuration hint; transport implementations may or may not validate the connection.
|[source, code, linenums]
----
validateConnections="true"
----
|===

=== Properties Tab

image:hl7_global_properties.png[hl7_global_properties]

[width="100%",cols="34a,33a,33a",options="header",]
|===
|Name |Description |XML
|*Spring Properties* |Use this tab to enter Spring bean property information. To add a property in Studio, click the image:conn.spring.props-addbutton.png[conn.spring.props-addbutton] button under *Spring Properties.*
|[source,xml, linenums]
----
<spring:property name="com.sample.sampleBean" value="sampleValue"/>
----

|===

=== Protocol Tab

image:hl7_global_protocol.png[hl7_global_protocol]

[width="100%",cols="34a,33a,33a",options="header",]
|===
|Name |Description |XML
|*HL7 Message Encoding* |Allows you to select between ER7, XML, and HAPI.
|[source, code, linenums]
----
hl7Encoding="ER7"
----
|*Strong / Weak Validation* |
Allows you to select between `STRONG` or `WEAK` HL7 message validation (leave blank for no validation).

* `STRONG`: Checks that all message structure components are present, and that the message is well-formed
* `WEAK`: Only checks that the message is well-formed

|[source, code, linenums]
----
validation="STRONG"
----
|*Send Buffer Size* |Buffer size in bytes for sending data.
|[source, code, linenums]
----
sendBufferSize="0"
----
|*Receive Buffer Size* |Buffer size in bytes for receiving data.
|[source, code, linenums]
----
receiveBufferSize="0"
----
|*Receive Backlog* |Maximum queue size for incoming connections.
|[source, code, linenums]
----
receiveBacklog="0"
----
|
*Send TCP No Delay*

(boolean)

|Do not collect data before transmitting; send data immediately.
|[source, code, linenums]
----
sendTcpNoDelay="true"
----
|
*Reuse Address*

(boolean)

|Enable `SO_REUSEADDRESS` on server sockets. This helps reduce `Address already in use` errors when a socket is reused. Default value: `true`
|[source, code, linenums]
----
reuseAddress="true"
----
|
*Keep Send Socket Open*

(boolean)

|Do not close a socket after sending a message.
|[source, code, linenums]
----
keepSendSocketOpen="true"
----
|*Keep Alive*

(boolean)

|Enable `SO_KEEPALIVE` on open sockets. This causes a probe packet to be sent on an open socket which has not registered activity for a long period of time, to check whether the remote peer is up.
|[source, code, linenums]
----
keepAlive="true"
----
|*Client SO_TIMEOUT* |Set the `SO_TIMEOUT` value for client sockets (in milliseconds). This is the timeout for waiting for data. +
A value of `0` means forever.
|[source, code, linenums]
----
clientSoTimeout="10000"
----
|*Server SO_TIMEOUT* |Set the `SO_TIMEOUT` value for server sockets (in milliseconds). This is the timeout for waiting for data. +
A value of `0` means forever.
|[source, code, linenums]
----
serverSoTimeout="10000"
----
|*Socket SO_LINGE* |Set the `SO_LINGER` value for sockets (in milliseconds). This is the value of the delay before closing a socket. If enabled, a call to close the socket before data transmission has finished  blocks the calling program; the block remains in place until data transmission is finished or until the connection times out. |[source, code, linenums]
----
socketSoLinger="0"
----
|===

....
[tab,title="XML Editor"]
....

To access the Studio XML Editor, click the *Configuration XML* tab under the canvas.

For details, see http://www.mulesoft.org/documentation/display/current/Mule+Studio+Essentials#MuleStudioEssentials-XMLEditorTipsandTricks[XML Editor trips and tricks].

The table below describes all configurable parameters for this building block.

[width="100%",cols="34a,33a,33a",options="header",]
|===
|Name |Description |XML
|
*Name*

(Studio only)

|Name of the building block as it appears in the flow
|[source, code, linenums]
----
name="connectorName"
----
|*Dispatched Pool Factory* |Allows you to reference a TCP dispatcher pool factory other than the default dispatcher factory bean. To add a different dispatcher factory bean ID in Studio, click the image:conn.spring.props-addbutton.png[conn.spring.props-addbutton] button next to the combo box.
|[source, code, linenums]
----
dispatcherPoolFactory-ref="sampleBean"
----

|
*Dynamic Notifications*

(boolean)

|Enables link:/documentation/display/current/Mule+Server+Notifications[Dynamic Notifications] for this connector.
|[source, code, linenums]
----
dynamicNotification="true"
----
|
*Validate Connections*

(boolean)

|Causes Mule to validate connections before using this connector. Note that this is only a configuration hint; transport implementations may or may not validate the connection.
|[source, code, linenums]
----
validateConnections="true"
----
|*Spring Properties* |Use this tab to enter Spring bean property information. To add a property in Studio, click the image:conn.spring.props-addbutton.png[conn.spring.props-addbutton] button under *Spring Properties.*
|[source,xml, linenums]
----
<spring:property name="com.sample.sampleBean" value="sampleValue"/>
----

|*HL7 Message Encoding* |Allows you to select between ER7, XML and HAPI.
|[source, code, linenums]
----
hl7Encoding="ER7"
----
|*Strong / Weak Validation* |
Allows you to select between `STRONG` or `WEAK` HL7 message validation (leave blank for no validation).

* `STRONG`: Checks that all message structure components are present, and that the message is well-formed
* `WEAK`: Only checks that the message is well-formed

|[source, code, linenums]
----
validation="STRONG"
----
|*Send Buffer Size* |Buffer size in bytes for sending data.
|[source, code, linenums]
----
sendBufferSize="0"
----
|*Receive Buffer Size* |Buffer size in bytes for receiving data.
[source, code, linenums]
----
receiveBufferSize="0"
----
|*Receive Backlog* |Maximum queue size for incoming connections.
|[source, code, linenums]
----
receiveBacklog="0"
----
|
*Send TCP No Delay*

(boolean)

|Do not collect data before transmitting; send data immediately.
|[source, code, linenums]
----
sendTcpNoDelay="true"
----
|
*Reuse Address*

(boolean)

|Enable `SO_REUSEADDRESS` on server sockets. This helps reduce `Address already in use` errors when a socket is reused. Default value: `true`
|[source, code, linenums]
----
reuseAddress="true"
----
|
*Keep Send Socket Open*

(boolean)

|Do not close a socket after sending a message.
|[source, code, linenums]
----
keepSendSocketOpen="true"
----
|
*Keep Alive*

(boolean)

|Enable `SO_KEEPALIVE` on open sockets. This causes a probe packet to be sent on an open socket which has not registered activity for a long period of time, to check whether the remote peer is up.
|[source, code, linenums]
----
keepAlive="true"
----
|*Client SO_TIMEOUT* |Set the `SO_TIMEOUT` value for client sockets (in milliseconds). This is the timeout for waiting for data. +
A value of `0` means forever.
|[source, code, linenums]
----
clientSoTimeout="10000"
----
|*Server SO_TIMEOUT* |Set the `SO_TIMEOUT` value for server sockets (in milliseconds). This is the timeout for waiting for data. +
A value of `0` means forever.
|[source, code, linenums]
----
serverSoTimeout="10000"
----
|*Socket SO_LINGE* |Set the `SO_LINGER` value for sockets (in milliseconds). This is the value of the delay before closing a socket. If enabled, a call to close the socket before data transmission has finished blocks the calling program; the block remains in place until data transmission is finished or until the connection times out.
|[source, code, linenums]
----
socketSoLinger="0"
----
|===

....
[tab,title="Standalone"]
....

=== HL7 Connector Attributes

[width="100%",cols="20a,20a,20a,20a,20a",options="header",]
|===
|Name |Type/Allowed values |Required |Default |Description
|`hl7Encoding` |
* `ER7`
* `XML`
* `HAPI`

|Yes |- |Encoding of the HL7 message when it is received by the connector. Can be a string in HL7 pipe-delimited format (ER7) or XML; or a HAPI object.
|`validation` |
* `WEAK`
* `STRONG`

|Yes |`WEAK` |Enable/disable default HAPI HL7 message validation during sending/receiving. `STRONG`: Validation enabled; `WEAK`: validation disabled
|===

The HL7 Connector also accepts all attributes configurable for TCP connectors. See the  link:/documentation/display/current/TCP+Transport+Reference[TCP Transport Reference].

=== Namespace and Syntax

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/hl7
----

=== XML Schema Location

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/hl7/mule-hl7.xsd
----

....
------
